# integreat-chat

./: .gitignore  AGENTS.md  INFO_TEMPLATE.md  README.md  ZAMMAD_CONFIG.md  integreat-chat.ini  pyproject.toml  security.txt
integreat_chat/chatanswers/: urls.py  utils.py  views.py
integreat_chat/chatanswers/services/: answer.py  answer_service.py  language.py  llmapi.py  milvus.py  query_transformer.py  rag_message.py  search.py
integreat_chat/chatanswers/static/: messages.py  prompts.py
integreat_chat/chatanswers/utils/: integreat_cms.py  rag_request.py  rag_response.py
integreat_chat/core/: settings.py  urls.py  views.py
integreat_chat/core/utils/: chat_message.py  health.py  integreat_cms.py  integreat_request.py
integreat_chat/search/: celery.py  tasks.py  urls.py  views.py
integreat_chat/search/management/commands/: index_all_regions.py  index_pages.py  index_region.py  opensearch_setup.py  search.py
integreat_chat/search/services/: opensearch.py  search.py
integreat_chat/search/templates/: search.html
integreat_chat/search/utils/: search_request.py  search_response.py
integreat_chat/translate/: urls.py  views.py
integreat_chat/translate/services/: language.py
integreat_chat/translate/static/: prompts.py
scripts/: gen_initial_message_triggers.sh
