[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "integreat_chat"
description = "Machine Learning Back End for the Integreat Chat functionality"
version = "2026.2.0"
authors = [{name = "Tür an Tür Digitalfabrik gGmbH", email = "tech@tuerantuer.org"}]
readme = "README.md"
requires-python = ">=3.13"
keywords = [
  "Integreat"
]
license = {text = "Apache 2.0 License"}
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]

dependencies = [
  "accelerate",
  "aiohttp",
  "beautifulsoup4",
  "celery",
  "django",
  "django-celery",
  "gunicorn",
  "langchain-text-splitters",
  "lxml",
  "numpy",
  "redis",
  "torch",
  "uvicorn",
]


[project.optional-dependencies]
dev = []

[project.urls]
"Homepage" = "https://tuerantuer.de/digitalfabrik"
"Source Code" = "https://github.com/digitalfabrik/integreat-chat"
"Issues" = "https://github.com/digitalfabrik/integreat-chat/issues"

[tool.setuptools]
script-files = ["integreat_chat/manage.py"]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["integreat_chat*"]
